# flasktemplatemaker

./: .gitpod.Dockerfile  README.md  app.py  app.spec  pyproject.toml  requirements.txt
GreatApp/: app.py  runEXE.bat
GreatApp/greatapp/: __init__.py  hashing.py  models.py
GreatApp/greatapp/static/css/: dashboard.css  main.css
GreatApp/greatapp/templates/: base.html  dashboard.html  home.html  info.html  register.html  reset_request.html
GreatApp/greatapp/templates/error_pages/: 403.html  404.html
GreatApp/greatapp/users/: forms.py  views.py
GreatApp/migrations/: env.py
exe/: runEXE.bat
exe/app/tempraw/: requirements.txt  startserver.bat
exe/app/tempraw/myapp/: __init__.py  mainswitch.py  models.py
exe/app/tempraw/myapp/templates/: dashboard.html  home.html  info.html  modals.html  register.html  reset_request.html
exe/app/tempraw/myapp/templates/error_pages/: 404.html
exe/app/tempraw/myapp/users/: forms.py  views.py
tempraw/: app.py  requirements.txt
tempraw/migrations/versions/: 7ec4f5d878ae_first_migrate_commit.py
tempraw/myapp/: __init__.py  data.sqlite  hashing.py  mainswitch.py  models.py
tempraw/myapp/core/: views.py
tempraw/myapp/error_pages/: handlers.py
tempraw/myapp/static/js/: dashboard.js
tempraw/myapp/templates/: base.html  home.html  login.html  register.html  reset_token.html
tempraw/myapp/templates/error_pages/: 403.html  404.html
tempraw/myapp/users/: forms.py  views.py
