[tool.poetry]
name = "flasktemplatemaker"
version = "0.1.0"
description = ""
authors = ["Shoab Saadat <dr.shoaibsaadat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask-sqlalchemy = "^2.4"
alembic = "^1.3"
sqlalchemy = "^1.3"
flaskwebgui = "^0.1.3"
wtforms = "^2.2"
flask-wtf = "^0.14.2"
flask-login = "^0.4.1"
flask-migrate = "^2.5"
flask = "^1.1"
flask-mail = "^0.9.1"
itsdangerous = "^1.1"
pyfladesk = "^1.1"
werkzeug = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
